# Homework

./: README.md  main.py  pyproject.toml
src/: masks.py  processing.py  widget.py
src/masks/: __init__.py  masks.py
