[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["TV <you@example.com>"]
readme = "README.md"
packages = [
    { include = "masks", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = .venv

[tool.black]
# Максимальная длина строки
line-length = 119
exclude = .git

[tool.isort]
# максимальная длина строки
line_length = 119
